--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -177,6 +177,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\EnvironmentHistory.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Exception.cpp"
 				>
 			</File>
