re #183 Added functionality to allow the spectradectedtor map to be able to map detectors to spectra.  Also added missing tests for this class

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -382,6 +382,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\SpectraDetectorMapTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAPI\Workspace.h"
 				>
 			</File>
