--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -166,6 +166,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\BackToBackExponentialPeakFit.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\BinaryOperation.cpp"
 				>
 			</File>
@@ -223,6 +227,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\BackToBackExponentialPeakFit.h"
+				>
+			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\BinaryOperation.h"
 				>
