re #185. All algorithm parameters now have direction: Input, Output, or InOut. Output parameters (except workspaces) are not shown in the ExecuteAlgorithm dialog box in QtiPlot.

--- a/Code/Mantid/UserAlgorithms/UserAlgorithms.vcproj
+++ b/Code/Mantid/UserAlgorithms/UserAlgorithms.vcproj
@@ -26,6 +26,8 @@
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
+				CommandLine="copy $(OutDir)\$(SolutionName)$(ProjectName).dll $(SolutionDir)\Bin\Plugins\$(SolutionName)$(ProjectName).dll /Y"
+				Outputs="$(SolutionDir)/Bin/Plugins/$(SolutionName)$(ProjectName).dll"
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
