Implement a basic LoadDAE algorithm that reads the data from the DAE, but does not set up a full instrument.
The DAE is very like a raw file, so much of the code already in LoadRAW for loading
an instrument would apply here - maybe it could all be moved into a common sub-algorithm
for both LoadRAW and LoadDAE to use?

Refs #136

--- a/Code/Mantid/DataHandling/SConscript
+++ b/Code/Mantid/DataHandling/SConscript
@@ -8,6 +8,7 @@ codeFolder = os.path.abspath('./src')
 listCpps = MantidBuild.getCPPFiles(codeFolder) 
 listCpps = listCpps + MantidBuild.getCPPFiles(codeFolder + '/LoadRaw')
 listCpps = listCpps + MantidBuild.getCPPFiles(codeFolder + '/NeXusUtils')
+listCpps = listCpps + MantidBuild.getCPPFiles(codeFolder + '/LoadDAE')
 
 #Import environment
 Import('env')
