--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -77,6 +77,7 @@ if os.name == 'nt':
 		libList.append('libNeXus-0')
 
 	libList.append('gsl')
+	libList.append('ws2_32')   # winsock library
 
 	cppPaths = [boost_path, third_party + '/include/', python_path + '/include/']
 	
