--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -212,6 +212,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\MemoryManager.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\RefAxis.cpp"
 				>
 			</File>
@@ -355,6 +359,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAPI\LocatedDataValue.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAPI\MemoryManager.h"
 				>
 			</File>
 			<File
