--- a/Code/Mantid/debug/Mantid.properties
+++ b/Code/Mantid/debug/Mantid.properties
@@ -15,3 +15,5 @@ logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s
 logging.formatters.f1.class = PatternFormatter
 logging.formatters.f1.pattern = %s-[%p] %t
 logging.formatters.f1.times = UTC;
+
+ManagedWorkspace.DataBlockSize = 100000000
