Added reading of instrument data from an XML definition or from the Nexus file. As no XML for EMU and the Nexus file lacks sufficient data at present, no instrument data is loaded. Re #182

--- a/Code/Mantid/Nexus/Nexus.vcproj
+++ b/Code/Mantid/Nexus/Nexus.vcproj
@@ -161,6 +161,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\LoadInstrumentFromNexus.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadMuonNexus.cpp"
 				>
 			</File>
@@ -187,7 +191,15 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\inc\MantidNexus\LoadInstrumentFromNexus.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidNexus\LoadMuonNexus.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\LoadMuonNexusTest.h"
 				>
 			</File>
 			<File
