Code added to specify geometry (for now sphere, infinite-plane and infinite-cylinder and any combination of these) in instrument definition file. Refs #194.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -220,6 +220,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\ShapeFactory.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadRaw\vms_convert.cpp"
 				>
 			</File>
@@ -311,6 +315,10 @@
 			</File>
 			<File
 				RelativePath=".\test\SaveNeXusTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\ShapeFactory.h"
 				>
 			</File>
 			<File
