--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -47,6 +47,8 @@ boost_path = ''
 poco_path = ''
 fortran_type=''
 third_party=''
+gts_path = ''
+glib_path = ''
 
 #Get paths
 if os.name == 'nt': 
@@ -57,6 +59,8 @@ if os.name == 'nt':
 	
 	python_path = 'C:/Python25/'
 
+	gts_path = third_party + '/include/gts'
+	glib_path = third_party + '/include/gts/glib-2.0'
 	libList.append('PocoUtil')
 	libList.append('PocoFoundation')
 	libList.append('PocoXML')
@@ -77,9 +81,13 @@ if os.name == 'nt':
 		libList.append('libNeXus-0')
 
 	libList.append('gsl')
+	libList.append('glib-2.0') #glib required by gts
+	libList.append('gts-0.7') #gts
+	libList.append('opengl32')#opengl required for rendering
+	libList.append('glu32') #glu companion for opengl
 	libList.append('ws2_32')   # winsock library
 
-	cppPaths = [boost_path, third_party + '/include/', python_path + '/include/']
+	cppPaths = [boost_path, third_party + '/include/', python_path + '/include/', gts_path, glib_path]
 	
 	#set up scons to embed manifest files
 	env['LINKCOM'] = [env['LINKCOM'], 'mt.exe -nologo -manifest ${TARGET}.manifest -outputresource:$TARGET;1']
@@ -129,6 +137,9 @@ else:
 	libList.append('boost_regex'+boost_append)
 	libList.append('boost_signals'+boost_append)
 	libList.append('NeXus')
+	libList.append('GL')
+	libList.append('GLU')
+	
 
 	if os.path.isdir('/usr/local/poco-1.3.1/'+ '/lib/Linux/i686') :
 		libDirList.append('/usr/local/poco-1.3.1/' +'/lib/Linux/i686')
@@ -150,7 +161,16 @@ else:
 	flags=re.sub('\n','',f.readline())
 	lpts=re.split("\s+",flags)
 	lpts.append('-g')
-	
+	#check for GTS library
+	f=os.popen('gts-config --cflags')
+	flags=re.sub('\n','',f.readline())
+	if (len(flags)>1):
+		cflags.append([flags])
+	f.close()
+	f=os.popen('gts-config --libs')
+	flags=re.sub('\n','',f.readline())
+	lpts=re.split("\s+",flags)
+	lpts.append('-g')
 #check existence of Header files
 conf = Configure(env)
 if conf.CheckCXXHeader('unordered_map.h'):
