--- a/Code/Mantid/release/Mantid.properties
+++ b/Code/Mantid/release/Mantid.properties
@@ -18,3 +18,11 @@ logging.formatters.f1.times = UTC;
 
 logging.loggers.root.channel.channel3 = signalChannel
 logging.channels.signalChannel.class = SignalChannel
+
+#Where to load instrument definition files from
+instrumentDefinition.directory = ../../../../Test/Instrument
+
+# Uncommenting the line below will lead to all 2D workspaces being of the ManagedWorkspace2D variety
+#ManagedWorkspace.MinSize = 0
+ManagedWorkspace.DataBlockSize = 4000
+ManagedWorkspace.FilePath = /nonsense/fdghjksdg
