WorkspaceFactory uses memory information to decide when to create a ManagedWorkspace. re #206

--- a/Code/Mantid/debug/Mantid.properties
+++ b/Code/Mantid/debug/Mantid.properties
@@ -2,7 +2,7 @@
 plugins.directory = .
 
 #logging configuration
-logging.loggers.root.level = debug
+logging.loggers.root.level = information
 logging.loggers.root.channel.class = SplitterChannel
 logging.loggers.root.channel.channel1 = consoleChannel
 logging.loggers.root.channel.channel2 = fileChannel
@@ -16,4 +16,13 @@ logging.formatters.f1.class = PatternFormatter
 logging.formatters.f1.pattern = %s-[%p] %t
 logging.formatters.f1.times = UTC;
 
-ManagedWorkspace.DataBlockSize = 100000000
+logging.loggers.root.channel.channel3 = signalChannel
+logging.channels.signalChannel.class = SignalChannel
+
+#Where to load instrument definition files from
+instrumentDefinition.directory = ../../../../Test/Instrument
+
+# Uncommenting the line below will lead to all 2D workspaces being of the ManagedWorkspace2D variety
+ManagedWorkspace.MinSize = 0
+#ManagedWorkspace.DataBlockSize = 4000
+ManagedWorkspace.FilePath = /nonsense/fdghjksdg
