Added AlgorithmMonitor class to qtiplot which monitors all running algorithms. re #203

--- a/Code/Mantid/release/Mantid.properties
+++ b/Code/Mantid/release/Mantid.properties
@@ -23,6 +23,6 @@ logging.channels.signalChannel.class = SignalChannel
 instrumentDefinition.directory = ../../../../Test/Instrument
 
 # Uncommenting the line below will lead to all 2D workspaces being of the ManagedWorkspace2D variety
-ManagedWorkspace.MinSize = 0
+#ManagedWorkspace.MinSize = 0
 ManagedWorkspace.DataBlockSize = 4000
 ManagedWorkspace.FilePath = /nonsense/fdghjksdg
