--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -243,6 +243,10 @@
 				RelativePath=".\src\WorkspaceOpOverloads.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\src\WorkspaceValidators.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -423,6 +427,10 @@
 			</File>
 			<File
 				RelativePath=".\test\WorkspaceTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAPI\WorkspaceValidators.h"
 				>
 			</File>
 		</Filter>
